--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,34 @@
 /* You can add global styles to this file, and also import other style files */
+/*@import '~https://fonts.googleapis.com/icon?family=Material+Icons';*/
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+/* fallback */
+/* fallback */
+@font-face {
+  font-family: 'Material Icons';
+  font-style: normal;
+  font-weight: 400;
+  src: url(fonts/2fcrYFNaTjcS6g4U3t-Y5ZjZjT5FdEJ140U2DJYC3mY.woff2) format('woff2');
+}
+
+.material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 1;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
+  -webkit-font-feature-settings: 'liga';
+  -webkit-font-smoothing: antialiased;
+}
+
+body,html {
+  margin:0;
+  padding:0;
+  width:100%;
+  height:100%;
+}
